PSP/examenPsp-AdrianSaavedra/RestExamen-AdrianSaavedra/src/main/java/org/example/restexamenadriansaavedra/common/errors/CropNotAvailable.java
package org.example.restexamenadriansaavedra.common.errors;

public class CropNotAvailable extends RuntimeException{

    public CropNotAvailable(String message) {
        super(message);
    }
}
